--- a/TJ_Fans_v1.2/client/src/components/Navbar.css
+++ b/TJ_Fans_v1.2/client/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.NavigationBar {
+/* .NavigationBar {
     display: flex;
     font-family: "Courier New", monospace;
     margin-bottom: 2rem;
@@ -9,9 +9,42 @@
     display: flex;
     flex: 1;
     transition: 160ms all;
-    padding: 0.5rem;
+    
 }
 
 .NavigationBar a:hover {
     color: mediumaquamarine;
-}
+} */
+
+  /* Navbar */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.7rem 2rem;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    top: 0;
+    border-bottom: solid 1px var(--primary-color);
+    opacity: 0.9;
+  }
+  
+  .navbar ul {
+    display: flex;
+  }
+  
+  .navbar a {
+    color: #fff;
+    padding: 0.45rem;
+    margin: 0 0.25rem;
+  }
+  
+  .navbar a:hover {
+    color: var(--primary-color);
+  }
+  
+  .navbar .welcome span {
+    margin-right: 0.6rem;
+  }
+  
