--- a/TJ_Fans_v1.2/client/src/pages/List.css
+++ b/TJ_Fans_v1.2/client/src/pages/List.css
@@ -1,5 +1,10 @@
 .List {
     font-family: Monaco, monospace;
+    margin-top: 7rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .List .ProductCard {
