Show title/notes on list history

--- a/TJ_Fans_v1.3/client/src/components/ListHistory.css
+++ b/TJ_Fans_v1.3/client/src/components/ListHistory.css
@@ -5,6 +5,11 @@
     border-bottom: 1px solid mediumaquamarine;
 }
 
+.ListHistoryNotes {
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
 .ListHistoryId {
     flex: 1;
     font-family: Monaco, monospace;
