Update github link

--- a/TJsFans1.5_heroku/templates/home.html
+++ b/TJsFans1.5_heroku/templates/home.html
@@ -93,7 +93,7 @@
             <div class="card-body">
                 <h2 class="about-text">Link to my socials:</h2>
                 <p><a href="https://www.linkedin.com/in/michedomingo/">LinkedIn</a></p>
-                <p><a href="https://github.com/michedomingo/TJs_Fans">Github</a></p>
+                <p><a href="https://github.com/michedomingo">Github</a></p>
                 <p><a href="https://twitter.com/micheflamingo">Twitter</a></p>
                 <p>Michelle Domingo is a Trader Joe's fanatic and lifelong student, currently tinkering with the MERN stack.</p>
         </div>
